--- a/src/css/header.css
+++ b/src/css/header.css
@@ -4,40 +4,52 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  border-bottom: 1px solid black;
   padding-bottom: 50px;
   padding-top: 50px;
   vertical-align: center;
 }
 
 .header_logotext{
-  font-size: 30px;
-  
+  font-size: 50px;
+  font-weight: 800;
   margin-right: 200px;
+}
+.header_logotext a{
+  text-decoration: none;
+  color: black;
 }
 
 .searchform{
-  
   margin-right: 200px;
 }
 
 .searchinput{
   width: 300px;
   height: 50px;
-  border-radius: 10px;
-  border-color: grey;
-  margin-right: 20px;
+  border-color: rgb(71, 234, 255);
+  border: none;
+  background-color:rgb(226, 240, 237);
 }
 
 .searchbtn{
   height: 50px;
   width: 50px;
+  border: none;
+  background: none;
+  cursor: pointer;
 }
 
 .loginbtn{
   height: 50px;
   width: 100px;
- 
+  background-color: rgb(71, 234, 255);
+  border: 0;
+  font-size: 20px;
+  cursor: pointer;
+}
+
+.loginbtn:hover{
+  font-size: 23px;
 }
 
 
