--- a/src/css/Messages.css
+++ b/src/css/Messages.css
@@ -30,3 +30,19 @@
     display: flex;
     align-items: center;
 }
+
+.dialog-message{
+    display: inline-block;
+    border: 1px solid gray;
+    padding: 5px;
+    border-radius: 5px;
+    max-width: 300px;
+    max-height: 300px;
+    padding: 5px;
+    margin: 15px;
+}
+
+.dialog{
+    display: flex;
+    flex-direction: column;
+}
