--- a/src/css/Messages.css
+++ b/src/css/Messages.css
@@ -1,11 +1,20 @@
+.content-dialog{
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+}
+
 .dialogs-area{
     display: grid;
     grid-template-columns: 5fr 10fr;
-    
+    align-items: center;
+    text-align: center;
+    justify-content: center;
 }
+
 .dialogs-list ul li{
     list-style-type: none;
-    display: inline-block;
+    display: block;
     padding: 10px;
     cursor: pointer;
 }
@@ -22,7 +31,6 @@
 }
 
 .dialogs-list{
-    
     display: flex;
 }
 
@@ -45,4 +53,23 @@
 .dialog{
     display: flex;
     flex-direction: column;
+    margin: 0 auto;
+}
+
+.postMsg{
+    align-items: center;
+    text-align: center;
+    justify-content: center;
+    display: flex;
+}
+
+.textArea{
+    display: inline-block;
+}
+
+.btnDialog button{
+    display: inline-block;
+    margin: 20px;
+    height: 50px;
+    width: 100px;
 }
