--- a/src/css/profile.css
+++ b/src/css/profile.css
@@ -1,9 +1,12 @@
+
+
 .header-profile{
     display: grid;
     grid-template-columns: 1fr 3fr;
     height: 200px;
     width: 800px;
     border-radius: 20px;
+    margin: 0 auto;
     background-image: url(https://i.pinimg.com/originals/6a/e7/f3/6ae7f382c0bdd7c0306fb5d5c8982418.jpg);
 }
 
@@ -33,7 +36,25 @@
   font-size: 30px;
   display: flex;
   justify-content: center;
-align-items: center;
+  align-items: center;
+  flex-wrap: wrap;
+}
+
+.descr{
+    display: inline-block;
+    text-align: center;
+    width:100%;
+    max-width: 600px;
+    max-height: 20px;
+    max-inline-size: 550px;
+}
+.add-post-btn button{
+    display: inline-block;
+    width: 100px;
+    height: 20px;
+    background: none;
+    border: none;
+    color:crimson;
 }
 
 .myPost{
@@ -41,4 +62,11 @@ align-items: center;
     width: 200px;
     border: 1px solid black;
     margin: 10px;
+}
+
+.myWall{
+    display: flex;
+    align-items:center;
+    justify-content: center;
+    margin: 0 auto;
 }
